# seed_intersphinx_mapping

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  check_packages.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  latex_zwsp.py  license.rst  requirements.txt  rtd-extra-deps.txt  rtd-requirements.txt  usage.rst
doc-source/_templates/: base.html
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: cache.rst  core.rst  extension.rst  index.rst  requirements_parsers.rst  seed_intersphinx_mapping.rst
seed_intersphinx_mapping/: __init__.py  __main__.py  cache.py  core.py  extension.py  fallback_mapping.json  requirements_parsers.py
tests/: conftest.py  requirements.txt  test_cache.py  test_core.py  test_integration.py  test_main.py  test_requirements_parsers.py  test_seeding.py  test_setup.py
tests/doc-test/test-root/: conf.py  index.rst
tests/test_seeding_/: test_sphinx_seed_intersphinx_mapping_list_mocked.yml  test_sphinx_seed_intersphinx_mapping_mocked_bad_example_requirements_flit_.yml  test_sphinx_seed_intersphinx_mapping_mocked_bad_example_requirements_requirements_.yml  test_sphinx_seed_intersphinx_mapping_mocked_example_requirements_a_flit_.yml  test_sphinx_seed_intersphinx_mapping_mocked_example_requirements_a_pyproject_.yml  test_sphinx_seed_intersphinx_mapping_mocked_example_requirements_a_pyproject_toml_.yml  test_sphinx_seed_intersphinx_mapping_mocked_example_requirements_a_requirements_.yml
