[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "seed_intersphinx_mapping"
version = "0.3.1"
description = "Populate the Sphinx 'intersphinx_mapping' dictionary from the project's requirements."
readme = "README.rst"
keywords = [ "sphinx", "intersphinx", "documentation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/seed_intersphinx_mapping"
"Issue Tracker" = "https://github.com/sphinx-toolbox/seed_intersphinx_mapping/issues"
"Source Code" = "https://github.com/sphinx-toolbox/seed_intersphinx_mapping"
Documentation = "https://seed_intersphinx_mapping.readthedocs.io/en/latest"
