[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "seed_intersphinx_mapping"
version = "0.4.1"
description = "Populate the Sphinx 'intersphinx_mapping' dictionary from the project's requirements."
readme = "README.rst"
keywords = [ "sphinx", "intersphinx", "documentation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/seed_intersphinx_mapping"
"Issue Tracker" = "https://github.com/sphinx-toolbox/seed_intersphinx_mapping/issues"
"Source Code" = "https://github.com/sphinx-toolbox/seed_intersphinx_mapping"
Documentation = "https://seed_intersphinx_mapping.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
additional-files = [ "include seed_intersphinx_mapping/fallback_mapping.json",]

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
